assets/css/prose.css
/*
 * Copyright 2023 Exactpro (Exactpro Systems Limited)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.gevamu-prose {
  @apply prose print:max-w-[100ch]
    max-w-[none]
    prose-headings:no-underline
    print:prose-pre:whitespace-normal
    marker:prose-ul:text-accent-200 marker:prose-ol:text-accent-700;
}

.gevamu-prose :not(pre) code {
  background-color: rgba(0, 0, 0, 0.05);
  padding: 0.2em 0.4em;
  font-size: 0.85em;
  font-weight: 400;
  border-radius: 3px;
}

.gevamu-prose :not(pre) code::before,
.gevamu-prose :not(pre) code::after {
  content: none;
}

